client/src/styles.css
html {
  height: 100%;
}

body {
  overflow: auto;
  height: 100%;
}

#root {
  height: 100%;
}

.card {
  border-radius: 25px;
  margin: auto;
  width: 60%;
}

.submitButton {
  border: none;
  background-color: rgb(67, 221, 126);
  border-radius: 20px;
}

.submitButton:hover {
  background-color: rgb(21, 187, 85);
  box-shadow: 0px 0px 10px rgb(151, 251, 189);
  transition: 0.5s;
}

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: red;
  color: white;
  text-align: center;
}

.circularButton {
  border-radius: 50%;
  width: 60px;
  height: 60px;
}

